--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 <body>
     <div class="main">
-        <h1>Welcome to Rangwik</h1>
+        <h1>Welcome to Gulaboarts</h1>
 
         <a href="https://gulaboarts.com/" target="_blank" class="link-btn custom-link">
             <i class="fa-solid fa-link icon"></i> gulaboarts.com
